--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Oxhen</title>
+  <title>Best Event Management Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Premium Bootstrap v5.1.3 Landing Page Template" />
   <meta name="keywords" content="bootstrap v5.1.3, premium, marketing, multipurpose" />
   <meta content="Themesdesign" name="author" />
 
   <!-- fevicon -->
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="https://i.ibb.co/NCbbBNZ/logo.png">
 
   <!-- Bootstrap css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <!-- animation -->
-  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+
 
   <!-- slider -->
-  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-
+ 
+  <base href="/" />
   <!-- Icon -->
   <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css"
     type="text/css" />
@@ -30,29 +29,18 @@
   <link rel="stylesheet" href="asset/css/style.min.css" type="text/css" />
 
 
+
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-
-    -->
 
   <!-- ========================Bootstarp CDN============================= -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    <script src="bower_components/aos/dist/aos.js"></script> 
-
 </body>
 
 </html>
